--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="landing.html">Home</a></li>
                         <li><a href="#">Payment</a></li>
                         <li><a href="#">Port Number</a></li>
                         <li><a href="#">Voicemail</a></li>
@@ -65,7 +65,7 @@
                     <div class="carousel-caption">
                         <h2 class="animated bounceInRight" style="animation-delay: 1s">We Are <span>Creative</span></h2>
                         <h3 class="animated bounceInLeft" style="animation-delay: 2s">Call Services</h3>
-                        <p class="animated bounceInRight" style="animation-delay: 3s"><a href="index.html" target="blank">HOME</a></p>
+                        <p class="animated bounceInRight" style="animation-delay: 3s"><a href="landing.html" target="blank">HOME</a></p>
                     </div>
                 </div>
                 <div class="item">
@@ -75,7 +75,7 @@
                     <div class="carousel-caption">
                         <h2 class="animated slideInDown" style="animation-delay: 1s">We Are <span>COPYCALL</span></h2>
                         <h3 class="animated fadeInUp" style="animation-delay: 2s">Call Services</h3>
-                        <p class="animated zoomIn" style="animation-delay: 3s"><a href="index.html" target="blank">HOME</a></p>
+                        <p class="animated zoomIn" style="animation-delay: 3s"><a href="landing.html" target="blank">HOME</a></p>
                     </div>
                 </div>
                 <div class="item">
@@ -85,7 +85,7 @@
                     <div class="carousel-caption">
                         <h2 class="animated zoomIn" style="animation-delay: 1s">We Are <span>GLOBAL</span></h2>
                         <h3 class="animated fadeInLeft" style="animation-delay: 2s">Call Services</h3>
-                        <p class="animated zoomIn" style="animation-delay: 3s"><a href="index.html" target="blank">HOME</a></p>
+                        <p class="animated zoomIn" style="animation-delay: 3s"><a href="landing.html" target="blank">HOME</a></p>
                     </div>
                 </div>
 
