--- a/landing.html
+++ b/landing.html
@@ -46,7 +46,7 @@
             <p>Local US & Canada telephone numbers
                 with voicemail or call-forwarding
                 ...save big - port your mobile or landline number to us</p>
-            <a href="slider.html" class="btn">BACK</a>
+            <a href="index.html" class="btn">BACK</a>
         </div>
 
         <div class="image">
